fixed buttons disappreaing on mobile

--- a/port/src/style/home/iOSDeveloper/_iOSDeveloper.scss
+++ b/port/src/style/home/iOSDeveloper/_iOSDeveloper.scss
@@ -2,6 +2,9 @@
     margin: 0 12.5vw;
     padding-top: 10vh;
     height: 110vh;
+    @media screen and (max-width: 480px) {
+        height: 120vh;
+    }
 }
 
 .iOSBackground {
