--- a/port/src/style/workDetails/_workDetails.scss
+++ b/port/src/style/workDetails/_workDetails.scss
@@ -30,7 +30,7 @@
 
 .descriptionWork {
     margin-top: 5vh;
-    font-size: 1.4rem;
+    font-size: 1rem;
     opacity: 30%;
     font-weight: 500;
     @media screen and (max-width: 480px) {
